fixed collapsing hr

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -31,3 +31,10 @@ footer
     font-family: 'Raleway';
     font-size: 1.3em;
 }
+@media (max-width: 576px) 
+{
+    .collapsable
+    {
+        display: none;
+    }
+}
